--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <a href="www.google.com"><strong> CANVAS OF LOVE</strong></a>
    </div>
     <!-- <div class="bottomText">
-      <strong></strong>
+      <strong>gokul ms</strong>
    </div> -->
   </div>
 
