--- a/index.html
+++ b/index.html
@@ -1,88 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wedding photography ideas</title>
-    <link rel="stylesheet" href="css/weddingStyle.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>wedding photography ideas</title>
+   <link rel="stylesheet" href="css/weddingStyle.css">
 </head>
+
 <body>
-    <div class="imgContainer">
-    <img src="images/br gd.jpg.jpg" alt="">
-    <div class ="centerText">
-     <a href="www.google.com"><strong> CANVAS OF LOVE</strong></a>
+   <div class="imgHeader">
+      <img src="asset/images/br gd.jpg.jpg" alt="">
+      <div class="centerText">
+         <a href="www.google.com"><strong> CANVAS OF LOVE</strong></a>
+      </div>
    </div>
-    <!-- <div class="bottomText">
-      <strong>gokul ms</strong>
-   </div> -->
-  </div>
+   <div class="container1">
+      <h3>Pre-Ceremony Shots</h3>
+      <div class="wedcntr preWed">
+         <div class="sub-wed-cntr">
+            <p><strong>Getting Ready:</strong> Capture the bride and groom getting ready, focusing on candid moments
+               like the bride's makeup, the groom fixing his tie, or a bridesmaid adjusting the dress.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/makeup (2).jpg">
+            </div>
+         </div>
+         <div class="sub-wed-cntr">
+            <p> <strong>Details:</strong> Highlight close-ups of the wedding dress, shoes, jewelry, rings, bouquet, and
+               invitation suite.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/groom-dress.webp">
+            </div>
+         </div>
+         <div class="sub-wed-cntr">
+            <p><strong>First Look:</strong> Photograph the emotional reaction during the first look between the bride
+               and groom.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/first-look-lin-jirsa-1.jpg">
+            </div>
+         </div>
+      </div>
 
-   <div class="tableContent">
-   <div class="preWed">
-     <ul>
-        <h3>Pre-Ceremony Shots</h3>
-        <li><strong>Getting Ready:</strong> Capture the bride and groom getting ready, focusing on candid moments like the bride's makeup, the groom fixing his tie, or a bridesmaid adjusting the dress.</li>
-        <img src="images/makeup (2).jpg" >
-        <li> <strong>Details:</strong> Highlight close-ups of the wedding dress, shoes, jewelry, rings, bouquet, and invitation suite.</li>
-        <img src="images/groom-dress.webp">
-        <li><strong>First Look:</strong> Photograph the emotional reaction during the first look between the bride and groom.</li>
-        <img src="images/first-look-lin-jirsa-1.jpg">
-     </ul>
-        </div>
-    <div class="cereMony">    
-
-   <ul>
       <h3>Ceremony Shots</h3>
-      <li><strong>The Aisle Walk:</strong> nap the bride walking down the aisle and the groom’s reaction.</li>
-      <img src="images/wed walk 2.jpg" >
-      <li> <strong>Vows:</strong>  Zoom in on hands, facial expressions, or tearful moments during the exchange of vows.</li>
-      <img src="images/look.jpg">
-      <li><strong>Wide Angle:</strong>  Use a wide-angle lens to capture the entire venue and the couple at the altar.</li>
-      <img src="images/Kerala-Wedding-Photography-55-1200x800.jpg" >
-   </ul>
-   </div>
-   <div class="postWed">
-<ul>
-   <H3>Post-Ceremony Portraits</H3>
-   <li><strong>Golden Hour Glow: </strong> Schedule couple portraits during the golden hour for soft, romantic lighting.</li>
-      <img src="images/Kerala-Wedding-Photography-75.jpg" >
-      <li> <strong>Reflection Shots:</strong>   Use mirrors, puddles, or glass to create artistic reflection effects.</li>
-      <img src="images/mirror.jpg">
-      <li><strong>Candid Laughter:</strong>   Encourage the couple to share a joke or moment to capture genuine smiles.</li>
-      <img src="images/candid.jpg" >
-   </ul>
-   </div>
-   </div>
-   <div class="container2">
-   <div class="groupFa">
-   <ul>
+      <div class="wedcntr cereMony">
+         <div class="sub-wed-cntr">
+            <p><strong>The Aisle Walk:</strong> nap the bride walking down the aisle and the groom’s reaction.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/wed walk 2.jpg">
+            </div>
+         </div>
+         <div class="sub-wed-cntr">
+            <p> <strong>Vows:</strong> Zoom in on hands, facial expressions, or tearful moments during the exchange of
+               vows.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/look.jpg">
+            </div>
+         </div>
+         <div class="sub-wed-cntr">
+            <p><strong>Wide Angle:</strong> Use a wide-angle lens to capture the entire venue and the couple at the
+               altar.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/Kerala-Wedding-Photography-55-1200x800.jpg">
+            </div>
+         </div>
+      </div>
+
+      <h3>Post-Ceremony Portraits</h3>
+      <div class="wedcntr postWed">
+         <div class="sub-wed-cntr">
+            <p><strong>Golden Hour Glow: </strong> Schedule couple portraits during the golden hour for soft, romantic
+               lighting.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/Kerala-Wedding-Photography-75.jpg">
+            </div>
+         </div>
+         <div class="sub-wed-cntr">
+            <p> <strong>Reflection Shots:</strong> Use mirrors, puddles, or glass to create artistic reflection
+               effects.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/mirror.jpg">
+            </div>
+         </div>
+         <div class="sub-wed-cntr">
+            <p><strong>Candid Laughter:</strong> Encourage the couple to share a joke or moment to capture genuine
+               smiles.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/candid.jpg">
+            </div>
+         </div>
+      </div>
       <H3>Group and Family Shots</H3>
-      <li><strong>Generational Photo:</strong> Include grandparents and other older relatives for a meaningful family portrait.</li>
-         <img src="images/AMILY AND FRNDS.jpg" >
-         <li> <strong>Fun Bridal Party:</strong>   Have the bridal party jump, strike silly poses, or cheer with confetti.</li>
-         <img src="images/Kerala-Wedding-Photography-55-1200x800.jpg">
-         <li><strong>Overhead Shot: </strong>   Use a drone or high vantage point for a unique perspective on group photos.</li>
-         <img src="images/creative.jpg" >
-   </div>
-      </ul>
-<div class="receptionFun">
-   <div class="firstDance">
+      <div class="wedcntr">
+         <div class="sub-wed-cntr">
+            <p><strong>Generational Photo:</strong> Include grandparents and other older relatives for a meaningful
+               family
+               portrait.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/AMILY AND FRNDS.jpg">
+            </div>
+         </div>
+         <div class="sub-wed-cntr">
+            <p> <strong>Fun Bridal Party:</strong> Have the bridal party jump, strike silly poses, or cheer with
+               confetti.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/Kerala-Wedding-Photography-55-1200x800.jpg">
+            </div>
+         </div>
+         <div class="sub-wed-cntr">
+            <p><strong>Overhead Shot: </strong> Use a drone or high vantage point for a unique perspective on group
+               photos.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/creative.jpg">
+            </div>
+         </div>
+      </div>
       <h3>Reception Fun</h3>
-      <li>
-      <strong>First Dance:</strong>
-       Focus on the couple and the ambiance, such as string lights or a sparkler exit.
-       <img src="images/Kerala-Christian-Enagement-Pics-186-1200x800.jpg">
-       </div>
-      </li>
-      <li>
-      <strong>Decor Details:</strong> Document the centerpieces, cake, and venue setup before guests arrive.
-      <img src="images/RECEPTION.webp">
-       </li>
-      <li>
-      <strong>Candid Guests:</strong> Photograph heartfelt moments like kids playing, laughter, or toasts.
-      <img src="images/RECEPTION MOMENTS.webp">
-   </li>
+      <div class="wedcntr">
+         <div class="sub-wed-cntr">
+            <p><strong>First Dance:</strong>
+               Focus on the couple and the ambiance, such as string lights or a sparkler exit.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/Kerala-Christian-Enagement-Pics-186-1200x800.jpg">
+            </div>
+         </div>
+         <div class="sub-wed-cntr">
+            <p><strong>Decor Details:</strong> Document the centerpieces, cake, and venue setup before guests arrive.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/RECEPTION.webp">
+            </div>
+         </div>
+         <div class="sub-wed-cntr">
+            <p>
+               <strong>Candid Guests:</strong> Photograph heartfelt moments like kids playing, laughter, or toasts.</p>
+            <div class="img-cntr">
+               <img src="asset/images/photography/RECEPTION MOMENTS.webp">
+            </div>
+         </div>
+      </div>
    </div>
-</div>
 </body>
+
 </html>
