--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>wedding photography ideas</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="css/weddingStyle.css">
+   <script src="script.js"></script>
+   <!-- <script src="userData.js"></script> -->
 </head>
 
 <body>
@@ -16,12 +21,12 @@
       </div>
    </div>
    <div class="container1">
-      <h3>Pre-Ceremony Shots</h3>
+      <!-- <h3>Pre-Ceremony Shots</h3>
       <div class="wedcntr preWed">
          <div class="sub-wed-cntr">
             <p><strong>Getting Ready:</strong> Capture the bride and groom getting ready, focusing on candid moments
                like the bride's makeup, the groom fixing his tie, or a bridesmaid adjusting the dress.</p>
-            <div class="img-cntr">
+            <div class="img-cntr" onclick="imageOpen()">
                <img src="asset/images/photography/makeup (2).jpg">
             </div>
          </div>
@@ -39,105 +44,15 @@
                <img src="asset/images/photography/first-look-lin-jirsa-1.jpg">
             </div>
          </div>
-      </div>
-
-      <h3>Ceremony Shots</h3>
-      <div class="wedcntr cereMony">
-         <div class="sub-wed-cntr">
-            <p><strong>The Aisle Walk:</strong> nap the bride walking down the aisle and the groom’s reaction.</p>
-            <div class="img-cntr">
-               <img src="asset/images/photography/wed walk 2.jpg">
-            </div>
-         </div>
-         <div class="sub-wed-cntr">
-            <p> <strong>Vows:</strong> Zoom in on hands, facial expressions, or tearful moments during the exchange of
-               vows.</p>
-            <div class="img-cntr">
-               <img src="asset/images/photography/look.jpg">
-            </div>
-         </div>
-         <div class="sub-wed-cntr">
-            <p><strong>Wide Angle:</strong> Use a wide-angle lens to capture the entire venue and the couple at the
-               altar.</p>
-            <div class="img-cntr">
-               <img src="asset/images/photography/Kerala-Wedding-Photography-55-1200x800.jpg">
-            </div>
-         </div>
-      </div>
-
-      <h3>Post-Ceremony Portraits</h3>
-      <div class="wedcntr postWed">
-         <div class="sub-wed-cntr">
-            <p><strong>Golden Hour Glow: </strong> Schedule couple portraits during the golden hour for soft, romantic
-               lighting.</p>
-            <div class="img-cntr">
-               <img src="asset/images/photography/Kerala-Wedding-Photography-75.jpg">
-            </div>
-         </div>
-         <div class="sub-wed-cntr">
-            <p> <strong>Reflection Shots:</strong> Use mirrors, puddles, or glass to create artistic reflection
-               effects.</p>
-            <div class="img-cntr">
-               <img src="asset/images/photography/mirror.jpg">
-            </div>
-         </div>
-         <div class="sub-wed-cntr">
-            <p><strong>Candid Laughter:</strong> Encourage the couple to share a joke or moment to capture genuine
-               smiles.</p>
-            <div class="img-cntr">
-               <img src="asset/images/photography/candid.jpg">
-            </div>
-         </div>
-      </div>
-      <H3>Group and Family Shots</H3>
-      <div class="wedcntr">
-         <div class="sub-wed-cntr">
-            <p><strong>Generational Photo:</strong> Include grandparents and other older relatives for a meaningful
-               family
-               portrait.</p>
-            <div class="img-cntr">
-               <img src="asset/images/photography/AMILY AND FRNDS.jpg">
-            </div>
-         </div>
-         <div class="sub-wed-cntr">
-            <p> <strong>Fun Bridal Party:</strong> Have the bridal party jump, strike silly poses, or cheer with
-               confetti.</p>
-            <div class="img-cntr">
-               <img src="asset/images/photography/Kerala-Wedding-Photography-55-1200x800.jpg">
-            </div>
-         </div>
-         <div class="sub-wed-cntr">
-            <p><strong>Overhead Shot: </strong> Use a drone or high vantage point for a unique perspective on group
-               photos.</p>
-            <div class="img-cntr">
-               <img src="asset/images/photography/creative.jpg">
-            </div>
-         </div>
-      </div>
-      <h3>Reception Fun</h3>
-      <div class="wedcntr">
-         <div class="sub-wed-cntr">
-            <p><strong>First Dance:</strong>
-               Focus on the couple and the ambiance, such as string lights or a sparkler exit.</p>
-            <div class="img-cntr">
-               <img src="asset/images/photography/Kerala-Christian-Enagement-Pics-186-1200x800.jpg">
-            </div>
-         </div>
-         <div class="sub-wed-cntr">
-            <p><strong>Decor Details:</strong> Document the centerpieces, cake, and venue setup before guests arrive.</p>
-            <div class="img-cntr">
-               <img src="asset/images/photography/RECEPTION.webp">
-            </div>
-         </div>
-         <div class="sub-wed-cntr">
-            <p>
-               <strong>Candid Guests:</strong> Photograph heartfelt moments like kids playing, laughter, or toasts.</p>
-            <div class="img-cntr">
-               <img src="asset/images/photography/RECEPTION MOMENTS.webp">
-            </div>
-         </div>
-      </div>
+      </div> -->
    </div>
+  
+<div class="modalCntr" onclick="closeModal()">
+ 
+   <div class="modalImgCntr" >
+   <img class="imgModal" src="">
+   </div>
+</div>
 </body>
 
 </html>
